# mpd-now-playable

./: .editorconfig  .gitignore  README.md  me.00dani.mpd-now-playable.plist  pyproject.toml
.github/runtime/: action.yml
.github/workflows/: static-checks.yml
schemata/: config-v1.json  playback-v1.json  song-v1.json
src/corefoundationasyncio/: __init__.py  eventloop.py
src/mpd_now_playable/: async_tools.py  cache.py  cli.py  cocoa.py  launchd.py  player.py  song.py  song_receiver.py
src/mpd_now_playable/cocoa/: now_playing.py  persistent_id.py
src/mpd_now_playable/config/: config-v1.json  fields.py  load.py  model.py  schema.py
src/mpd_now_playable/mpd/: artwork_cache.py  listener.py  types.py
src/mpd_now_playable/mpd/convert/: to_playback.py  to_song.py
src/mpd_now_playable/playback/: __init__.py  playback.py  queue.py  settings.py  state.py
src/mpd_now_playable/receivers/cocoa/: __init__.py  now_playing.py  persistent_id.py
src/mpd_now_playable/receivers/cocoa/convert/: playback_to_media_item.py  song_to_media_item.py  to_nsimage.py  to_state.py
src/mpd_now_playable/receivers/websockets/: __init__.py  receiver.py
src/mpd_now_playable/song/: __init__.py  artwork.py  musicbrainz.py  song.py  stopped.py
src/mpd_now_playable/tools/: types.py
src/mpd_now_playable/tools/schema/: define.py  fields.py  generate.py  plugin.py
stubs/AppKit/: __init__.pyi
stubs/Foundation/: __init__.pyi
stubs/MediaPlayer/: __init__.pyi
stubs/aiocache/: __init__.pyi  base.pyi  factory.pyi  serializers.pyi
stubs/boltons/: iterutils.pyi
stubs/class_doc/: __init__.pyi
stubs/corefoundationasyncio/: eventloop.pyi
stubs/mpd/: asyncio.pyi  base.pyi
tests/: test_cli.py  test_launchd.py
typings/corefoundationasyncio/: __init__.pyi
